--- a/Assets/SteamVR/Input/Editor/SteamVR_Input_Editor.asmdef
+++ b/Assets/SteamVR/Input/Editor/SteamVR_Input_Editor.asmdef
@@ -5,7 +5,8 @@
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
-        "Editor"
+        "iOS",
+        "WindowsStandalone64"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
