--- a/Assets/SteamVR/Input/Editor/SteamVR_Input_Editor.asmdef
+++ b/Assets/SteamVR/Input/Editor/SteamVR_Input_Editor.asmdef
@@ -5,8 +5,7 @@
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
-        "iOS",
-        "WindowsStandalone64"
+        "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
